syntax = "proto3";

package pl.allegro.tech.servicemesh.envoycontrol;

option java_package = "pl.allegro.tech.servicemesh.envoycontrol.model";
option java_outer_classname = "ServicesStateProto";

message ServicesState {
    map<string, ServiceInstances> serviceNameToInstances = 1;
}

message ServiceInstances {
    string serviceName = 1;
    repeated ServiceInstance instances = 2;
}

message ServiceInstance {
    string id = 1;
    repeated string tags = 2;
    string address = 3;
    int32 port = 4;
    bool regular = 5;
    bool canary = 6;
    int32 weight = 7;
}